# mini_cc

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: README.md  README_zh.md  TODO.md
docs/Agent-Loop/: README.md  query_engine.md  stream.md  task.md
docs/agent-loop/: README.md  query-engine.md
docs/architecture/: data-flow.md  final-layout.md  overview.md  refactor-roadmap.md  状态机.md
docs/compression/: design.md
docs/context/: README.md
docs/harness/: design.md  orchestrator-refactor.md  task-specific-audit.md
docs/iteration/: design.md  runtime.md
docs/memory/: README.md  design.md  reference.md
docs/modules/: agents.md  app.md  context.md  features.md  harness.md  models.md  providers.md  runtime.md  task.md  tools.md
docs/multi-agent/: README.md  agent.md  infrastructure.md  task.md
docs/security/: README.md
docs/tools/: README.md
docs/tui/: README.md
scripts/eval/: README.md  eval_swebench.py  merge_report.py  swebench_run_eval.sh
scripts/task_audit/: mini_jq.py
src/mini_cc/: __main__.py  cli.py  repl.py
src/mini_cc/app/: cli.py  (+3 more)
tests/: test_repl.py
tests/agent/: test_agent.py  test_bus.py  test_snapshot.py  test_worktree.py
tests/compression/: test_compressor.py
tests/context/: test_engine_context.py  test_system_prompt.py  test_tool_use.py
tests/e2e/: test_harness_local_repo.py  test_smoke_real_provider.py
tests/harness/: test_bootstrap.py  test_harness.py
tests/memory/: test_extractor.py  test_store.py
(+171 files in other folders)
