[project]
name = "mini-cc"
version = "0.1.0"
description = "基于 Python 实现的轻量级多 Agent 协作代码助手 CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pyperclip>=1.8.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "textual>=3.0.0",
    "tiktoken>=0.7.0",
    "typer[all]>=0.15.0",
]

[project.scripts]
mini-cc = "mini_cc.cli:app"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
update_changelog_on_bump = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
exclude = ["tests/**"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "datasets>=4.8.4",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mini_cc"]
